bd-web-prd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bd-prd-web
  namespace: bd-prd
spec:
  selector:
    matchLabels:
      app: bd-prd-web
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: bd-prd-web
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - mysql
                topologyKey: kubernetes.io/hostname
      containers:
        - name: bd-prd-web
          image: quay.io/bot_detector/bd-web:a7df394
          ports:
            - name: website
              containerPort: 5000
            - name: metrics
              containerPort: 8000
