bd-web-prd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bd-prd-web-service
  namespace: bd-prd
spec:
  selector:
    app: bd-prd-web
  ports:
    - name: website
      port: 5000
      protocol: TCP
      targetPort: website
    - name: metrics
      port: 8000
      protocol: TCP
      targetPort: metrics
